@@ -39,6 +39,14 @@ class MyHTTPServer(ThreadingMixIn,HTTPServer):
         HTTPServer.__init__(self, *args, **kw)
         self.ready = True
 
+    def run(self):
+        try:
+            self.serve_forever()
+        except KeyboardInterrupt:
+            pass
+        finally:
+            # Clean-up server (close socket, etc.)
+            self.server_close()
 
 
 class enrollBrowser(BaseHTTPRequestHandler):
@@ -183,7 +191,7 @@ class enrollBrowser(BaseHTTPRequestHandler):
             return
 
         # redirect url to output
-        elif self.path == '/':
+        elif self.path == '/enroll':
 
             self.send_response(200)
             self.end_headers()
@@ -199,7 +207,7 @@ class enrollBrowser(BaseHTTPRequestHandler):
 
             self.wfile.write('<html><body>Two steps away.<br/><br/>  1) Visit this site and then paste the application code in the below form: <a href="https://accounts.google.com/o/oauth2/auth?scope=https://www.googleapis.com/auth/drive&redirect_uri=urn:ietf:wg:oauth:2.0:oob&response_type=code&client_id=772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com" target="new">Google Authentication</a><br /><br />2) Return back to this tab and provide a nickname and the application code provided in step 1. <form action="/enroll" method="post">Nickname for account:<br /><input type="text" name="account"><br />Code (copy and paste from step 1):<br /><input type="text" name="code"><br /><form action="/enroll" method="post">Client ID:<br /><input type="hidden" name="client_id" value="772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com"><br />Client Secret:<br /><input type="hidden" name="client_secret" value="PgteSoD4uagqHA1_nLERLDx9"><br /><br /></br /> <input type="submit" value="Submit"></form></body></html>')
             return
-        elif self.path == '/enroll':
+        elif self.path == '/enroll?default=false':
 
             self.send_response(200)
             self.end_headers()
